[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/resources/Coiny-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/lobby/network_message_popup.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[node name="NetworkMessagePopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -9.0
margin_right = 109.5
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Connecting ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatingServerMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -9.0
margin_right = 136.5
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Creating server ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionFailedMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -9.0
margin_right = 125.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Failed to connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerCreationFailedMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -9.0
margin_right = 125.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Failed to create server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidCodeMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -9.0
margin_right = 86.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Invalid code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotEnoughPlayersMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -9.0
margin_right = 201.5
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Need at least 1 player or bot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotEveryoneReadyMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -9.0
margin_right = 156.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Not everyone is ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifferingVersionMessage" type="Label" parent="." groups=[
"network_message",
]]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -9.0
margin_right = 156.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
text = "Differing versions
Server: v1.0
Client: v2.0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FailureTimer" type="Timer" parent="."]
one_shot = true

[node name="DotTimer" type="Timer" parent="."]
[connection signal="timeout" from="FailureTimer" to="." method="_on_FailureTimer_timeout"]
[connection signal="timeout" from="DotTimer" to="." method="_on_DotTimer_timeout"]
